--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
   <h1> test </h1>
   <p> wolfs are cool </p>
   <img src="img/wolf.jpeg">
+  <ul>
+    <li>wolves roam in packs</li>
+    <li>there is a alpha male in a pack</li>
+    <li>they hunt together</li>
+  </ul>
 </body>
 </html>
