--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1> Testing Git </h1>
 
 =======
-  <h1> test </h1>
+  <h1> BEAST mode wolf </h1>
   <p> wolfs are cool </p>
   <img src="img/wolf.jpeg">
   <ul>
